fixed home spacing

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@ body {
     padding: 40px 0px;
     font-size: 14px;
     text-align: center;
-
 }
 
 .title-card {
@@ -126,6 +125,10 @@ h1 {
     clear: both;
     margin: 40px auto;
     max-width: 600px;
+    min-width: 400px;
+    text-align: center;
+    display: inline-block;
+
 }
 
 .home-verbs h2 {
